# log_parser

./: .gitignore  Makefile  README.md  compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
config/: sample.yaml  test.yaml
docker_files/: Dockerfile
log_parser/: __main__.py
log_parser/models/: settings.py
log_parser/models/aws/: __init__.py  base_client.py  cloudwatch_client.py  s3_client.py
log_parser/models/aws/cloudwatch/: __init__.py  metric.py  metric_client.py
log_parser/services/: base.py
log_parser/services/aws/: __init__.py  aplication_load_blancer.py  application_load_blancer.py  aws_base.py  base.py  cloudwatch_metric.py
log_parser/tools/: metrics_dict_creation.py
tests/: conftest.py
tests/files/services/aws/application_load_blancer/: normal.tsv
tests/files/services/aws/cloudwatch/metrics/: applicationelb_requestcount_and_count_200_sum.json  applicationelb_requestcount_and_count_200_sum.tsv  applicationelb_requestcount_sum.json  applicationelb_requestcount_sum.tsv  list_metrics_response.json  list_metrics_response.txt  list_metrics_response_override.json  list_metrics_response_override.txt
tests/models/aws/: test_s3_client.py
tests/models/aws/cloudwatch/: test_metric.py
tests/services/aws/: test_aplication_load_blancer.py  test_application_load_blancer.py  test_cloudwatch_metric.py
tests/tools/: test_metrics_dict_creation.py
